--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   >
 </head>
 <body>
+  <!-- Galactic blurred background -->
   <div class="site-background"></div>
 
   <header class="site-header">
@@ -46,9 +47,10 @@
   </header>
 
   <main>
+    <!-- HERO -->
     <section id="home" class="hero">
       <div class="container hero-inner">
-        <div class="hero-main">
+        <div class="hero-main glass-panel">
           <p class="hero-kicker">New album out now</p>
           <h1 class="hero-title">
             Planet OM
@@ -99,7 +101,7 @@
           </div>
         </div>
 
-        <aside class="hero-panel">
+        <aside class="hero-panel glass-panel">
           <div class="hero-panel-inner">
             <div class="hero-album-tag">Featured release</div>
             <div class="hero-cover">
@@ -129,6 +131,7 @@
       </div>
     </section>
 
+    <!-- RELEASES -->
     <section id="music" class="section section-music">
       <div class="container">
         <div class="section-header">
@@ -136,7 +139,7 @@
           <h2 class="section-title">Releases</h2>
         </div>
 
-        <article id="autot" class="release release-featured">
+        <article id="autot" class="release release-featured glass-panel">
           <div class="release-media">
             <div class="release-cover">
               <img src="Media/AutotCover.jpg" alt="AUTOT album cover large">
@@ -167,7 +170,7 @@
           </div>
         </article>
 
-        <article class="release release-secondary">
+        <article class="release release-secondary glass-panel">
           <div class="release-media">
             <div class="video-frame">
               <iframe
@@ -204,6 +207,7 @@
       </div>
     </section>
 
+    <!-- ABOUT -->
     <section id="about" class="section section-about">
       <div class="container about-inner">
         <div class="section-header">
@@ -212,7 +216,7 @@
         </div>
 
         <div class="about-layout">
-          <div class="about-text">
+          <div class="about-text glass-panel">
             <p>
               Led by Israeli keyboardist and producer Gidi Cohen, Planet OM offers a cinematic
               journey through a world where electronic music intertwines with global influences.
@@ -243,6 +247,7 @@
       </div>
     </section>
 
+    <!-- CONTACT -->
     <section id="contact" class="section section-contact">
       <div class="container">
         <div class="section-header center">
@@ -250,7 +255,7 @@
           <h2 class="section-title">Booking & Social</h2>
         </div>
 
-        <div class="contact-layout">
+        <div class="contact-layout glass-panel">
           <div class="contact-text">
             <p>
               For bookings, live electronic sets, collaborations and custom music for film or media,
@@ -297,7 +302,7 @@
           <div class="contact-note">
             <p>
               You can also find Planet OM on:
-            </T>
+            </p>
             <ul>
               <li>Pandora - <a href="https://pandora.app.link/WHjBQkoVtQb" target="_blank" rel="noopener">Pandora artist page</a></li>
               <li>Amazon Music - <a href="https://www.amazon.com/music/player/artists/B08QZ2SYCV/planet-om" target="_blank" rel="noopener">Amazon artist page</a></li>
