--- a/index.html
+++ b/index.html
@@ -2,17 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Planet OM - AUTOT & Struggle</title>
+  <title>Planet OM | AUTOT</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Strong meta so iPhone and in-app browsers use this title -->
+  <meta name="description" content="Planet OM is an electronic world music project led by Israeli keyboardist and producer Gidi Cohen. AUTOT and Struggle blend electronic, Middle Eastern and psychedelic influences.">
+  <meta property="og:title" content="Planet OM | AUTOT">
+  <meta property="og:description" content="Electronic world music blending cinematic production, Middle Eastern colors and psychedelic textures.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://planetom-git.github.io/NewDesign/">
+  <meta property="og:image" content="https://planetom-git.github.io/NewDesign/Media/AutotCover.jpg">
+  <meta name="apple-mobile-web-app-title" content="Planet OM">
 
   <link rel="stylesheet" href="Style/mainStyle.css">
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
   <script src="./script/script.js" defer></script>
-
-  <meta
-    name="description"
-    content="Planet OM is an electronic world music project led by Israeli keyboardist and producer Gidi Cohen. AUTOT and Struggle blend electronic, Middle Eastern and psychedelic influences."
-  >
 </head>
 <body>
   <!-- Galactic blurred background -->
@@ -40,7 +44,7 @@
           <li><a href="#home" class="nav-link active">Home</a></li>
           <li><a href="#music" class="nav-link">Releases</a></li>
           <li><a href="#about" class="nav-link">About</a></li>
-          <li><a href="#contact" class="nav-link">Booking & Social</a></li>
+          <li><a href="#contact" class="nav-link">Booking &amp; Social</a></li>
         </ul>
       </nav>
     </div>
@@ -252,7 +256,7 @@
       <div class="container">
         <div class="section-header center">
           <p class="section-kicker">Connect</p>
-          <h2 class="section-title">Booking & Social</h2>
+          <h2 class="section-title">Booking &amp; Social</h2>
         </div>
 
         <div class="contact-layout glass-panel">
