--- a/index.html
+++ b/index.html
@@ -2,331 +2,162 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Planet OM | AUTOT</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Strong meta so iPhone and in-app browsers use this title -->
-  <meta name="description" content="Planet OM is an electronic world music project led by Israeli keyboardist and producer Gidi Cohen. AUTOT and Struggle blend electronic, Middle Eastern and psychedelic influences.">
-  <meta property="og:title" content="Planet OM | AUTOT">
-  <meta property="og:description" content="Electronic world music blending cinematic production, Middle Eastern colors and psychedelic textures.">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://planetom-git.github.io/NewDesign/">
-  <meta property="og:image" content="https://planetom-git.github.io/NewDesign/Media/AutotCover.jpg">
-  <meta name="apple-mobile-web-app-title" content="Planet OM">
-
+  <title>Planet OM | Electronic World Music</title>
+  <meta name="description" content="Planet OM - Cinematic electronic world music by Gidi Cohen.">
+  
   <link rel="stylesheet" href="Style/mainStyle.css">
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
   <script src="./script/script.js" defer></script>
 </head>
 <body>
-  <!-- Galactic blurred background -->
+
+  <!-- Texture & Background -->
+  <div class="noise-overlay"></div>
   <div class="site-background"></div>
 
+  <!-- Navigation -->
   <header class="site-header">
     <div class="container header-inner">
       <a href="#home" class="logo">
-        <div class="logo-mark">
-          <img src="Media/po-logo.jpg" alt="Planet OM logo">
-        </div>
+        <div class="logo-mark"><img src="Media/po-logo.jpg" alt="Logo"></div>
         <div class="logo-text">
           <span class="logo-title">Planet OM</span>
-          <span class="logo-subtitle">Electronic world music</span>
+          <span class="logo-subtitle">Prod. Gidi Cohen</span>
         </div>
       </a>
 
-      <input type="checkbox" id="nav-toggle" class="nav-toggle" />
-      <label for="nav-toggle" class="nav-toggle-btn">
-        <i class="bx bx-menu"></i>
-      </label>
+      <input type="checkbox" id="nav-toggle" class="nav-toggle">
+      <label for="nav-toggle" class="nav-toggle-label"><i class="bx bx-menu"></i></label>
 
       <nav class="main-nav">
         <ul>
-          <li><a href="#home" class="nav-link active">Home</a></li>
-          <li><a href="#music" class="nav-link">Releases</a></li>
-          <li><a href="#about" class="nav-link">About</a></li>
-          <li><a href="#contact" class="nav-link">Booking &amp; Social</a></li>
+          <li><a href="#home" class="nav-link active">01. Home</a></li>
+          <li><a href="#music" class="nav-link">02. Releases</a></li>
+          <li><a href="#about" class="nav-link">03. About</a></li>
+          <li><a href="#contact" class="nav-link">04. Contact</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
   <main>
-    <!-- HERO -->
+    <!-- Hero Section -->
     <section id="home" class="hero">
-      <div class="container hero-inner">
-        <div class="hero-main glass-panel">
-          <p class="hero-kicker">New album out now</p>
-          <h1 class="hero-title">
-            Planet OM
-            <span>AUTOT</span>
-          </h1>
-          <p class="hero-text">
-            Electronic world music that blends cinematic production, Middle Eastern colors
-            and psychedelic textures into one deep listening experience.
+      <div class="container hero-grid">
+        <div class="hero-content fade-up">
+          <span class="kicker">Latest Release • 01.01.2025</span>
+          <h1 class="hero-title">AUTOT</h1>
+          <p class="hero-subtitle">
+            A cinematic journey blending Middle Eastern colors with psychedelic textures. 
+            Inspired by the "Signs" series by David Rakia.
           </p>
-
-          <div class="hero-actions">
-            <a href="#autot" class="btn btn-primary" data-scroll-autot>
-              Listen to AUTOT
-            </a>
-            <a
-              href="https://distrokid.com/hyperfollow/planetom/autot"
-              class="btn btn-outline"
-              target="_blank"
-              rel="noopener"
-            >
-              All platforms
-            </a>
+          
+          <div class="btn-group">
+            <a href="https://distrokid.com/hyperfollow/planetom/autot" target="_blank" class="btn btn-primary">Listen Now</a>
+            <a href="#music" class="btn btn-outline">Discography</a>
           </div>
 
-          <div class="streaming-strip">
-            <span class="strip-label">Listen everywhere</span>
-            <div class="strip-links">
-              <a href="https://open.spotify.com/artist/3M9OpKkHz15JKmKMZVesuI" target="_blank" rel="noopener">
-                <i class="bx bxl-spotify"></i><span>Spotify</span>
-              </a>
-              <a href="https://music.apple.com/us/artist/planet-om/1545521793" target="_blank" rel="noopener">
-                <i class="bx bxl-apple"></i><span>Apple</span>
-              </a>
-              <a href="https://www.youtube.com/@planetommusic" target="_blank" rel="noopener">
-                <i class="bx bxl-youtube"></i><span>YouTube</span>
-              </a>
-              <a href="https://tidal.com/browse/artist/22705436/u" target="_blank" rel="noopener" class="tidal-link">
-                <img src="Media/icons/tidal-icon.svg" alt="Tidal">
-                <span>Tidal</span>
-              </a>
-              <a href="https://deezer.page.link/J3a9D86CX14XaRJY6" target="_blank" rel="noopener">
-                <i class="bx bxl-deezer"></i><span>Deezer</span>
-              </a>
-              <a href="https://planetom.bandcamp.com/" target="_blank" rel="noopener">
-                <i class="bx bxs-label"></i><span>Bandcamp</span>
-              </a>
-            </div>
+          <div class="platform-list">
+            <a href="https://open.spotify.com/artist/3M9OpKkHz15JKmKMZVesuI" target="_blank" class="platform-link"><i class='bx bxl-spotify'></i></a>
+            <a href="https://music.apple.com/us/artist/planet-om/1545521793" target="_blank" class="platform-link"><i class='bx bxl-apple'></i></a>
+            <a href="https://www.youtube.com/@planetommusic" target="_blank" class="platform-link"><i class='bx bxl-youtube'></i></a>
+            <a href="https://planetom.bandcamp.com/" target="_blank" class="platform-link"><i class='bx bxs-label'></i></a>
           </div>
         </div>
 
-        <aside class="hero-panel glass-panel">
-          <div class="hero-panel-inner">
-            <div class="hero-album-tag">Featured release</div>
-            <div class="hero-cover">
-              <img src="Media/AutotCover.jpg" alt="AUTOT album cover">
-            </div>
-            <div class="hero-track-meta">
-              <h2>AUTOT</h2>
-              <p class="hero-meta-artist">Planet OM</p>
-              <p class="hero-meta-text">
-                The debut album of Planet OM. Inspired by the "Signs" painting series by the late
-                Israeli painter David Rakia, AUTOT explores a mystical view of existence through sound.
-              </p>
-              <p class="hero-meta-sub">
-                Full album released 01.01.2025
-              </p>
-            </div>
-
-            <div class="hero-embed">
-              <iframe
-                src="https://open.spotify.com/embed/album/0000000000000000000000"
-                loading="lazy"
-                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-              ></iframe>
-            </div>
-          </div>
-        </aside>
+        <div class="hero-visual fade-up" style="transition-delay: 0.2s;">
+          <img src="Media/AutotCover.jpg" alt="AUTOT Album Art" class="album-art">
+        </div>
       </div>
     </section>
 
-    <!-- RELEASES -->
-    <section id="music" class="section section-music">
+    <!-- Music Section -->
+    <section id="music" class="section">
       <div class="container">
-        <div class="section-header">
-          <p class="section-kicker">Discography</p>
-          <h2 class="section-title">Releases</h2>
-        </div>
+        <span class="kicker fade-up">Discography</span>
+        <h2 class="fade-up" style="margin-bottom: 3rem;">Selected Works</h2>
 
-        <article id="autot" class="release release-featured glass-panel">
-          <div class="release-media">
-            <div class="release-cover">
-              <img src="Media/AutotCover.jpg" alt="AUTOT album cover large">
-            </div>
-            <a
-              href="https://distrokid.com/hyperfollow/planetom/autot"
-              class="btn btn-outline full-width"
-              target="_blank"
-              rel="noopener"
-            >
-              Listen on your favorite platform
-            </a>
+        <!-- Release 1 -->
+        <article class="release-card fade-up" id="autot">
+          <div class="release-art">
+            <img src="Media/AutotCover.jpg" alt="Autot Cover">
           </div>
-
           <div class="release-info">
-            <p class="release-tag">New album</p>
-            <h3 class="release-title">AUTOT</h3>
-            <p class="release-meta">Full album released · 01.01.2025</p>
-            <p class="release-text">
-              AUTOT is the debut album of Planet OM. The album cover showcases a work by the late
-              Israeli painter David Rakia, taken from his iconic "Signs" series ("Autot" - אותות in Hebrew),
-              which presents a mystical perspective on existence.
+            <div class="meta-row">LP // 2025 // ELECTRONIC WORLD</div>
+            <h3>AUTOT</h3>
+            <p class="release-desc">
+              The debut album. A mystical perspective on existence, translating visual art into soundscapes.
+              Collaborations with leading Israeli musicians create a deep listening experience.
             </p>
-            <p class="release-text">
-              Planet OM combines a wide range of genres with elements from electronic music and
-              Middle Eastern psychedelic influences, in collaboration with other Israeli musicians.
-            </p>
+            <a href="https://distrokid.com/hyperfollow/planetom/autot" target="_blank" class="btn btn-outline">Stream Album</a>
           </div>
         </article>
 
-        <article class="release release-secondary glass-panel">
-          <div class="release-media">
-            <div class="video-frame">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/videoseries?si=1_1IP28_qWeeoZQH&list=PLl5rhruab-rJhEOOsKeOvex9s_Bey9cJP"
-                title="Planet OM - Struggle EP"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin"
-                allowfullscreen
-              ></iframe>
+        <!-- Release 2 -->
+        <article class="release-card fade-up">
+          <div class="release-art">
+            <!-- Using a placeholder/video wrapper for consistency -->
+            <div style="position:relative; padding-bottom:56.25%; background:#000;">
+               <iframe style="position:absolute; top:0; left:0; width:100%; height:100%;" src="https://www.youtube.com/embed/videoseries?list=PLl5rhruab-rJhEOOsKeOvex9s_Bey9cJP" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
-
           <div class="release-info">
-            <p class="release-tag">EP release</p>
-            <h3 class="release-title">Struggle</h3>
-            <p class="release-meta">Released · 01.01.2021</p>
-            <p class="release-text">
-              On the album cover: the work "Struggle" by the late painter David Rakia.
-              The music is inspired by the painting and by the periodic struggle in which we find ourselves.
+            <div class="meta-row">EP // 2021 // DOWNTEMPO</div>
+            <h3>Struggle</h3>
+            <p class="release-desc">
+              Music inspired by the periodic struggles of existence. Deep, rhythmic, and introspective.
             </p>
-            <a
-              href="https://distrokid.com/hyperfollow/planetom/struggle"
-              class="btn btn-outline"
-              target="_blank"
-              rel="noopener"
-            >
-              Listen on your favorite platform
-            </a>
+            <a href="https://distrokid.com/hyperfollow/planetom/struggle" target="_blank" class="btn btn-outline">Stream EP</a>
           </div>
         </article>
       </div>
     </section>
 
-    <!-- ABOUT -->
-    <section id="about" class="section section-about">
-      <div class="container about-inner">
-        <div class="section-header">
-          <p class="section-kicker">The project</p>
-          <h2 class="section-title">About Planet OM</h2>
+    <!-- About Section -->
+    <section id="about" class="section">
+      <div class="container grid-2">
+        <div class="about-content fade-up">
+          <span class="kicker">The Project</span>
+          <h2 style="margin-bottom: 2rem;">Planet OM</h2>
+          <div class="text-block">
+            <p>Planet OM is the sonic vessel of Gidi Cohen, an Israeli keyboardist and producer.</p>
+            <p>It is where cinematic production meets global heritage. Electronic pulses intertwine with Middle Eastern scales and psychedelic textures to create harmonious landscapes.</p>
+            <p>Whether intended for meditation or movement, the sound of Planet OM is a bridge between the ancient and the synthetic.</p>
+          </div>
         </div>
-
-        <div class="about-layout">
-          <div class="about-text glass-panel">
-            <p>
-              Led by Israeli keyboardist and producer Gidi Cohen, Planet OM offers a cinematic
-              journey through a world where electronic music intertwines with global influences.
-            </p>
-            <p>
-              This fusion creates grand, harmonious landscapes intended to transport listeners to
-              otherworldly realms. Each track is a vibrant exploration of sound that moves between
-              meditative spaces and rhythm focused sections.
-            </p>
-            <p>
-              Om, the sound of creation, embraces a wide variety of styles, whether you want to
-              unwind, dance or explore new musical horizons.
-            </p>
-          </div>
-
-          <div class="about-photo">
-            <div class="about-photo-inner">
-              <img
-                src="Media/star-that-is-sky.jpg"
-                alt="Atmospheric galactic style background"
-              >
-              <div class="about-overlay">
-                <p>Planet OM - studio crafted electronic world music from Israel.</p>
-              </div>
-            </div>
-          </div>
+        <div class="about-image fade-up" style="transition-delay: 0.2s;">
+          <img src="Media/star-that-is-sky.jpg" style="width:100%; border-radius:2px; filter: sepia(20%) contrast(1.1);" alt="Atmosphere">
         </div>
       </div>
     </section>
 
-    <!-- CONTACT -->
-    <section id="contact" class="section section-contact">
+    <!-- Contact Section -->
+    <section id="contact" class="section">
       <div class="container">
-        <div class="section-header center">
-          <p class="section-kicker">Connect</p>
-          <h2 class="section-title">Booking &amp; Social</h2>
-        </div>
+        <div class="fade-up">
+          <span class="kicker">Booking & Inquiries</span>
+          <h2>Let's Connect</h2>
+          <p style="color:var(--text-muted); margin: 1rem 0 3rem;">Open for electronic sets, film scoring, and collaborations.</p>
+          
+          <a href="mailto:PlanetOmPro@Gmail.com" class="contact-link">PlanetOmPro@Gmail.com</a>
 
-        <div class="contact-layout glass-panel">
-          <div class="contact-text">
-            <p>
-              For bookings, live electronic sets, collaborations and custom music for film or media,
-              reach out directly by email or through social platforms.
-            </p>
-
-            <a href="mailto:PlanetOmPro@Gmail.com" class="contact-email">
-              <i class="bx bx-envelope"></i>
-              <span>PlanetOmPro@Gmail.com</span>
-            </a>
-
-            <div class="social-icons-row">
-              <a
-                href="https://www.facebook.com/PlanetOmMusic?mibextid=LQQJ4d"
-                target="_blank"
-                rel="noopener"
-              >
-                <i class="bx bxl-facebook-circle"></i>
-              </a>
-              <a
-                href="https://www.instagram.com/planetommusic"
-                target="_blank"
-                rel="noopener"
-              >
-                <i class="bx bxl-instagram"></i>
-              </a>
-              <a
-                href="https://planetom.bandcamp.com"
-                target="_blank"
-                rel="noopener"
-              >
-                <i class="bx bx-music"></i>
-              </a>
-              <a
-                href="https://www.youtube.com/@planetommusic"
-                target="_blank"
-                rel="noopener"
-              >
-                <i class="bx bxl-youtube"></i>
-              </a>
-            </div>
-          </div>
-
-          <div class="contact-note">
-            <p>
-              You can also find Planet OM on:
-            </p>
-            <ul>
-              <li>Pandora - <a href="https://pandora.app.link/WHjBQkoVtQb" target="_blank" rel="noopener">Pandora artist page</a></li>
-              <li>Amazon Music - <a href="https://www.amazon.com/music/player/artists/B08QZ2SYCV/planet-om" target="_blank" rel="noopener">Amazon artist page</a></li>
-              <li>Tidal - <a href="https://tidal.com/browse/artist/22705436/u" target="_blank" rel="noopener">Tidal artist page</a></li>
-            </ul>
+          <div class="platform-list" style="border:none; padding:0;">
+            <a href="https://www.instagram.com/planetommusic" target="_blank" class="platform-link"><i class='bx bxl-instagram'></i></a>
+            <a href="https://www.facebook.com/PlanetOmMusic" target="_blank" class="platform-link"><i class='bx bxl-facebook'></i></a>
+            <a href="https://planetom.bandcamp.com" target="_blank" class="platform-link"><i class='bx bxs-music'></i></a>
           </div>
         </div>
       </div>
     </section>
   </main>
 
-  <a href="#home" class="scroll-top">
-    <i class="bx bx-chevrons-up"></i>
-  </a>
-
-  <footer class="site-footer">
-    <div class="container footer-inner">
-      <span>Planet OM</span>
-      <span>AUTOT Records © <span id="footer-year"></span></span>
+  <footer style="padding: 2rem 0; border-top: 1px solid rgba(255,255,255,0.05); margin-top: 4rem;">
+    <div class="container" style="display:flex; justify-content:space-between; color: var(--text-muted); font-family: var(--font-tech); font-size: 0.8rem;">
+      <span>Planet OM © <span id="year"></span></span>
+      <span>Israel // Earth</span>
     </div>
   </footer>
+
 </body>
 </html>
