--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <img src="Media/tidal-icon.png" class="social-icon" alt="Tidal">
           </a>
 
-          <!-- 5. Bandcamp (SVG) -->
+          <!-- 5. Bandcamp (SVG - Corrected Path) -->
           <a href="https://planetom.bandcamp.com" target="_blank" aria-label="Bandcamp">
              <svg viewBox="0 0 24 24" fill="currentColor"><path d="M0 18.75l7.437-13.5H24l-7.438 13.5H0z"/></svg>
           </a>
