--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <div class="scanlines"></div>
   
   <div class="fixed-bg">
+    <div class="deep-space-gradient"></div>
     <div class="star-layer"></div>
     <div class="ambient-light"></div>
     <div class="ambient-light secondary"></div>
@@ -113,7 +114,6 @@
         <div class="cover-art-container reveal">
           <div class="video-container">
             <iframe 
-              style="position:absolute; top:0; left:0; width:100%; height:100%;" 
               src="https://www.youtube.com/embed/videoseries?list=PLl5rhruab-rJhEOOsKeOvex9s_Bey9cJP" 
               title="Planet OM - Struggle" 
               frameborder="0" 
