--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   
   <meta property="og:title" content="PLANET OM | Electronic World Music">
   <meta property="og:description" content="Set off on a transformative journey through the soundscapes of Planet OM.">
-  <meta property="og:image" content="Media/po-logo.jpg">
+  
+  <meta property="og:image" content="https://planetom-git.github.io/NewDesign/Media/thumb-logo.jpg">
+  <meta property="og:url" content="https://planetom-git.github.io/NewDesign/">
   <meta property="og:type" content="website">
 
   <link rel="stylesheet" href="Style/mainStyle.css">
@@ -67,7 +69,8 @@
       <div class="reactor-container">
         <div class="reactor-ring ring-1"></div>
         <div class="reactor-ring ring-2"></div>
-        <div class="reactor-ring ring-3"></div> <div class="reactor-core">
+        <div class="reactor-ring ring-3"></div>
+        <div class="reactor-core">
           <img src="Media/po-logo.jpg" alt="Planet OM Logo">
         </div>
       </div>
