--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <div class="reveal">
           <p class="section-label">THE PRODUCER</p>
           <h3 class="huge-quote">
-            A studio project by keyboardist and producer <span>Gidi Cohen</span>.
+            A studio project by pianist, composer and musical producer <span>Gidi Cohen</span>.
             <br><br>
             Blending electronic textures with Middle Eastern colors, creating a space for deep, introspective listening.
           </h3>
@@ -206,4 +206,5 @@
   <div id="cursor-blur"></div>
 
 </body>
+
 </html>
